# sysknife

./: .dockerignore  .gitignore  .markdown-link-check.json  .markdownlint.json  .mcp.json.example  .pre-commit-config.yaml  .yamllint  CHANGELOG.md  CLAUDE.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  HACKING.md  Makefile  README.md  ROADMAP.md  SECURITY.md  book.toml  glama.json  server.json
.claude/: hookify.require-sysknife-approval.md
.githooks/: pre-commit  pre-push
.github/: CONTRIBUTOR_LICENSE_AGREEMENT.md  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.yml  bug_report.yml  config.yml  feature.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  docs.yml  e2e.yml  release-rehearsal.yml  release.yml  scorecard.yml  secret-scan.yml
apps/sysknife-cli/: Cargo.toml  README.md
apps/sysknife-cli/src/: approval.rs  cli.rs  client.rs  distro_routing.rs  error.rs  main.rs  mcp_server.rs  render.rs  runner.rs
apps/sysknife-cli/tests/: cli_smoke.rs
apps/sysknife-shell/: index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
apps/sysknife-shell/src/: App.test.tsx  App.tsx  daemonBridge.ts  shellState.test.ts  shellState.ts  styles.css  types.ts
apps/sysknife-shell/src-tauri/: Cargo.toml  tauri.conf.json
apps/sysknife-shell/src-tauri/src/: commands.rs  daemon_client.rs  events.rs  main.rs
assets/demo/: README.md  demo-mock.sh  demo.tape  mcp-flow-mock.sh  mcp-flow.tape
assets/raster/: README.md
crates/sysknife-brain/: Cargo.toml
crates/sysknife-brain/src/: action_name.rs  audit.rs  config.rs  journal.rs  lib.rs  planner.rs  prefs.rs  prompt.rs  provider.rs  rate_limit.rs  sanitize.rs  state_client.rs
crates/sysknife-brain/src/planning_tools/: get_state.rs  mod.rs  preferences.rs  propose_plan.rs  query_tools.rs
crates/sysknife-brain/src/providers/: mod.rs  openai_adapter.rs  rig_adapter.rs
crates/sysknife-brain/tests/: planner.rs
crates/sysknife-core/: Cargo.toml
crates/sysknife-core/src/: action_family.rs  config.rs  distro.rs  lib.rs
crates/sysknife-daemon/: Cargo.toml  README.md
crates/sysknife-daemon-test/: Cargo.toml
crates/sysknife-daemon-test/src/: main.rs
crates/sysknife-daemon/src/: audit_chain.rs  audit_forward.rs  audit_watermark.rs  auth.rs  checkpoint_sink.rs  dispatcher.rs  distro.rs  executor.rs  jobs.rs  lib.rs  main.rs  policy.rs  preview.rs  state.rs  state_collector.rs  store.rs  transactions.rs
crates/sysknife-daemon/src/actions/: apparmor.rs  apt.rs  apt_preferences.rs  auditd.rs  certbot.rs  cloudinit.rs  containers.rs  deployment.rs  distrobox.rs  fail2ban.rs  filesystem.rs  flatpak.rs  grub.rs  identity.rs  journald.rs  layering.rs  layering_ubuntu.rs  livepatch.rs  logging.rs  lvm.rs  mod.rs  mounts.rs  multipass.rs  netplan.rs  network.rs  package_repos.rs  pam.rs  ppa.rs  processes.rs  reboot.rs  release_upgrade.rs  resolvectl.rs  services.rs  snap.rs  ssh.rs  sudoers.rs  sysctl.rs  system_info.rs  toolbox.rs  ubuntu_pro.rs  (+3 more)
crates/sysknife-daemon/src/store/: postgres.rs
crates/sysknife-daemon/src/transport/: framing.rs  listen.rs
crates/sysknife-daemon/tests/: accept_loop.rs  action_consistency.rs  action_reference_doc.rs  actions_batch1.rs  actions_batch2.rs  bootstrap.rs  concurrency_guard.rs  coverage_gaps.rs  execute_spec.rs  lifecycle_events.rs  postgres_store.rs  preview_approval.rs  preview_state_warning.rs  query_action_exit_codes.rs  rollback.rs  ssh_key_ops.rs
crates/sysknife-proto/: Cargo.toml  build.rs
crates/sysknife-proto/proto/sysknife/v1/: sysknife.proto
crates/sysknife-proto/src/: lib.rs
crates/sysknife-proto/tests/: generated_types.rs
crates/sysknife-types/: Cargo.toml
crates/sysknife-types/src/: lib.rs
crates/sysknife-types/tests/: proto_bridge.rs  schema_roundtrip.rs
docs/: SUMMARY.md  action-reference.md  actions.md  architecture.md  automatic-rollback.md  cli.md  comparison.md  configuration.md  developer-guide.md  distro-support.md  introduction.md  mcp-registry.md  mcp.md  quickstart.md  release-readiness.md  release.md  storage-cloud.md  the-audit-chain.md  typed-actions.md  ubuntu-action-gap-analysis.md  ubuntu-action-reference.md  user-stories.md  vm-daemon-setup.md
docs/adr/: 0001-system-boundaries.md  0002-brain-provider-layer.md  0003-ipc-wire-protocol.md  0004-per-distro-prompt-dispatch.md
docs/contributing/: CONTRIBUTING.md  testing.md  ubuntu-story-audit.md  ubuntu-vm-testing.md
docs/demo/: demo-script.md
docs/plans/: 2026-07-17-release-hardening-design.md  2026-07-17-release-hardening-plan.md  2026-07-19-oss-launch-readiness-design.md  2026-07-19-oss-launch-readiness-plan.md
docs/research/: prompt-composition-patterns.md
docs/security/: audit-advisories.md  red-team-2026-04-26.md
docs/testing/: user-stories.md
packaging/: 50-sysknife.rules  sysknife-apt-pin-edit  sysknife-audit-edit  sysknife-daemon.service  sysknife-fail2ban-jail-edit  sysknife-grub-kargs-edit  sysknife-log-edit  sysknife-mount-edit  sysknife-pam-edit  sysknife-scheduled-job-edit  sysknife-sshd-option-edit  sysknife-sudoers  sysknife-sudoers-edit  sysknife-sysctl-edit  sysknife-sysusers.conf  sysknife-tmpfiles.conf  sysknife-unattended-upgrades-edit
packaging/flatpak/: README.md  org.lacsfoundation.LacsShell.json
scripts/: check_public_claims.sh  check_registry_versions.sh  check_release_versions.sh  check_repo_completeness.sh  ci-local.sh  release_rehearsal.sh
tests/e2e/: atomic-vm.sh  dev-stories.sh  provision.sh  run-stories.sh  ubuntu-provision.sh  ubuntu-vm-bootstrap.test.sh  ubuntu-vm.conf  ubuntu-vm.sh
tests/e2e/exec/: exec-1.sh  exec-10.sh  exec-11.sh  exec-12.sh  exec-2.sh  exec-3.sh  exec-4.sh  exec-5.sh  exec-6.sh  exec-7.sh  exec-8.sh  exec-9.sh  run-exec-stories.sh
tests/e2e/stories/: story-1.sh  story-10.sh  story-100.sh  story-101.sh  story-102.sh  story-103.sh  story-104.sh  story-11.sh  story-12.sh  story-13.sh  story-14.sh  story-15.sh  story-16.sh  story-17.sh  (+90 more)
tests/release/: public-claims.test.sh  release-rehearsal.test.sh
theme/: custom.css
(+12 files in other folders)
