[workspace]
resolver = "2"
members = [
  "crates/sysknife-core",
  "crates/sysknife-brain",
  "crates/sysknife-daemon",
  "crates/sysknife-daemon-test",
  "crates/sysknife-proto",
  "crates/sysknife-types",
  "apps/sysknife-shell/src-tauri",
  "apps/sysknife-cli",
]

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/lacs-project/sysknife"
homepage = "https://github.com/lacs-project/sysknife"

[workspace.dependencies]
async-trait = "0.1"
prost = "0.14"
prost-types = "0.14"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
toml = "1.1"
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
