[package]
name = "sysknife-brain"
version = "0.2.6"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "LLM planning core for SysKnife — typed action proposals with formal risk levels"
keywords = ["llm", "ai-agent", "linux", "sysadmin", "planning"]
categories = ["command-line-utilities", "os::linux-apis"]

[dependencies]
async-trait = { workspace = true }
futures = "0.3"
sysknife-core = { path = "../sysknife-core", version = "0.2.6" }
sysknife-types = { path = "../sysknife-types", version = "0.2.6" }
async-openai = { version = "0.41", features = ["chat-completion"] }
# rig-core 0.40 renamed its lib crate `rig` -> `rig_core`; alias it back to `rig`
# so existing `use rig::...` paths keep working.
rig = { package = "rig-core", version = "0.40.0" }
# Used to classify structured provider error status codes (rig's
# `CompletionError::provider_response_status()` and async-openai's
# `ApiErrorResponse::status_code` both return this type). Already present
# transitively via async-openai/rig-core/reqwest; declared directly here
# because we match on its constants in our own code.
http = "1"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tempfile = "3"
tokio = { workspace = true, features = ["sync"] }
tracing = "0.1"
unicode-normalization = "0.1"

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros"] }
