[package]
name = "sysknife-core"
version = "0.2.6"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Configuration and domain primitives for SysKnife"
keywords = ["linux", "sysadmin", "configuration"]
categories = ["command-line-utilities", "config"]

[dependencies]
serde = { workspace = true, features = ["derive"] }
toml = { workspace = true }

[dev-dependencies]
tempfile = "3"
