[package]
name = "sysknife-types"
version = "0.2.5"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Shared action type definitions for SysKnife — reusable in third-party tooling"
keywords = ["llm", "ai-agent", "linux", "actions", "types"]
categories = ["command-line-utilities", "os::linux-apis"]

[dependencies]
sysknife-proto = { path = "../sysknife-proto" }
serde = { workspace = true }
serde_json = { workspace = true }
subtle = "2"
thiserror = { workspace = true }

[dev-dependencies]
prost = { workspace = true }
