[package]
name = "sysknife-types"
version = "0.2.8"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Shared action type definitions for SysKnife — reusable in third-party tooling"
keywords = ["llm", "ai-agent", "linux", "actions", "types"]
categories = ["command-line-utilities", "os::linux-apis"]

[dependencies]
sysknife-proto = { path = "../sysknife-proto", version = "0.2.8" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
prost = { workspace = true }
